--- a/src/main/resources/public/css/jquery.fileupload.css
+++ b/src/main/resources/public/css/jquery.fileupload.css
@@ -60,10 +60,10 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-body > .container {
+body > .containerFileUpload {
   padding: 60px 15px 0;
 }
-.container .text-muted {
+.containerFileUpload .text-muted {
   margin: 20px 0;
 }
 
@@ -74,4 +74,39 @@ body > .container {
 
 code {
   font-size: 80%;
+}
+
+
+/* css da datatable*/
+.wrapper {
+  margin: 0 auto;
+  padding: 40px;
+  max-width: 800px;
+}
+
+.table {
+  margin: 0 0 40px 0;
+  width: 100%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.row {
+  display: table-row;
+  background: #f6f6f6;
+}
+.row:nth-of-type(odd) {
+  background: #e9e9e9;
+}
+.row.header {
+  font-weight: 900;
+  color: #ffffff;
+  background: #ea6153;
+}
+.row.green {
+  background: #5cb85c;
+}
+
+.cell {
+  padding: 6px 12px;
+  display: table-cell;
 }
